--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -8,6 +8,7 @@ on:
       - 'v*'
     paths:
       - 'helm/**'
+      - '.github/workflows/helm-release.yaml'
 
 jobs:
   release:
@@ -47,6 +48,8 @@ jobs:
         run: |
           cp .cr-release-packages/*.tgz gh-pages/
           cd gh-pages
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
           helm repo index . --url https://${{ github.repository_owner }}.github.io/tushare
           git add .
           git commit -m "Update Helm charts" || echo "No changes to commit"
